--- a/Proyects/Survey_Form/index.html
+++ b/Proyects/Survey_Form/index.html
@@ -5,11 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andada+Pro:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Survey Form - Free Code Camp</title>
 </head>
 
-<body>
-    <h1>Próximamente</h1>
+<body class="body">
+    <div class="wrapper">
+        <h1 id="title">SOLICITA TU PRESUPUESTO</h1>
+        <p id="description">Esta información nos permitirá brindarle un presupuesto acorde a sus necesidades</p>
+
+        <form action="get" id="survey-form">
+            <div class="survey-form-field">
+                <label for="name" id="name-label">Nombre</label>
+                <input type="text" id="name" name="user_name" placeholder="Ingresa tu nombre" required>
+            </div>
+            <div class="survey-form-field">
+                <label for="email" id="email-label">Email</label>
+                <input type="email" id="email" name="user_email" placeholder="Ingresa tu email" required>
+            </div>
+            <div class="survey-form-field">
+                <label for="number" id="number-label">Teléfono</label>
+                <input type="number" id="number" name=number" placeholder="Ingresa tu telefono" min="6" max="15"
+                    required>
+            </div>
+            <div class="survey-form-field">
+                <label for="tel">¿Ya tiene un sitio web o es un proyecto desde cero?</label>
+                <select name="sitio_propio" id="dropdown">
+                    <option value="no">No tengo</option>
+                    <option value="si">Ya tengo un sitio web </option>
+                </select>
+            </div>
+            <div class="survey-form-field">
+                <label for="proposito">¿Cuál es el propósito del sitio?</label>
+                <textarea name="proposito" rows="10" cols="50"
+                    placeholder="Escribe aquí el propósito deseado"></textarea>
+            </div>
+            <div class="survey-form-field">
+                <label for="objetivosComerciales">¿Cuáles son los objetivos comerciales que esperas con el
+                    sitio?</label>
+                <textarea name="objetivosComerciales" rows="10" cols="50"
+                    placeholder="Escribe aquí el objetivo del proyecto"></textarea>
+            </div>
+            <div class="survey-form-field">
+                <label for="visionNegocio">¿Cuál es la visión de tu negocio?</label>
+                <textarea name="visionNegocio" rows="10" cols="50"
+                    placeholder="Escribe aquí la visión de tu negocio"></textarea>
+            </div>
+            
+            <div class="survey-form-field">
+                <button class="submit-btn" id="submit">
+                    <input type="button" value="ENVIAR">
+                </button>
+            </div>
+        </form>
+
+    </div>
+
 </body>
 
 </html>
