Correción de textos

--- a/Proyects/Survey_Form/index.html
+++ b/Proyects/Survey_Form/index.html
@@ -61,7 +61,7 @@
             <div class="survey-form-field textarea">
                 <label for="visionNegocio">¿Cuál es la visión de su negocio?</label>
                 <textarea name="visionNegocio" rows="10" cols="50"
-                    placeholder="Escriba aquí la visión de tu negocio"></textarea>
+                    placeholder="Escriba aquí la visión de su negocio"></textarea>
             </div>
 
             <fieldset class="survey-form-field checkListField">
