--- a/Proyects/Build_a_Tribute_Page/index.html
+++ b/Proyects/Build_a_Tribute_Page/index.html
@@ -34,9 +34,9 @@
             <i class="fas fa-bars"></i>
         </label>
         <ul class="nav-menu">
-            <li><a href="#header">INICIO</a></li>
-            <li><a href="#biografia">BIOGRAFÍA</a></li>
-            <li><a href="#discografia">DISCOGRAFÍA</a></li>
+            <li><a href="index.html#header">INICIO</a></li>
+            <li><a href="index.html#biografia">BIOGRAFÍA</a></li>
+            <li><a href="index.html#discografia">DISCOGRAFÍA</a></li>
         </ul>
     </nav>
     <div class="wrapper" id="main">
@@ -78,19 +78,18 @@
                 <div class="bandaTitle">
                     <h3>SODA STEREO</h3>
                 </div>
-                <div class="albumes">
-
-                </div>
             </div>
         </section>
         <footer class="footer">
             <div class="footerContent">
                 <div class="my-profile">
-                    <p>Sitio realizado por Selien Yorbandi</p>
-                    <a href="https://github.com/selienyorbandi" target="blank"><img src="img/logotipo-de-github.png"
+                    <p>Página realizada por Selien Yorbandi</p>
+                    <div class="linksFooter">
+                        <a href="https://github.com/selienyorbandi" target="blank"><img src="img/logotipo-de-github.png"
                             alt="Perfil de Github de Selien Yorbandi" width="25px"></a>
                     <a href="https://www.linkedin.com/in/selien-yorbandi-92a582210/" target="blank"><img
                             src="img/linkedin.png" alt="Perfil de LinkedIn de Selien Yorbandi" width="25px"></a>
+                    </div>
                 </div>
                 <p>Sitio en construcción</p>
             </div>
