Agregue favicon a la página tributo

--- a/Proyects/Build_a_Tribute_Page/index.html
+++ b/Proyects/Build_a_Tribute_Page/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/779db6cf6f.js" crossorigin="anonymous"></script>
 
-
     <title>Gustavo Cerati - Tributo</title>
-
-
-
+    <link rel="shortcut icon" href="img/gustavoCeratiLogo.ico">
 </head>
 
 <body class="body">
