Agregados los albumes de Cerati como solista

--- a/Proyects/Build_a_Tribute_Page/index.html
+++ b/Proyects/Build_a_Tribute_Page/index.html
@@ -390,6 +390,128 @@
                         </div>
                     </div>
                 </div>
+                <div class="discografiaContent">
+                    <div class="bandaTitle">
+                        <h3>SOLISTA</h3>
+                    </div>
+                </div>
+                <div class="albumes">
+                    <div class="albumOscuro" id="amorAmarillo1993">
+                        <div class="albumImg">
+                            <img src="img/albumAmorAmarillo1993.jpg"
+                                alt="Portada del primer album de Gustavo Cerati como solista, Amor Amarillo 1993">
+                        </div>
+                        <h4 class="albumTitle">
+                            AMOR AMARILLO (1993)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/75onhE4ne52iMHlVcpHUKR" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/373730" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/amor-amarillo/325221745" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_lDGr5jQaylRPhmyk97XvxnbfKZkjyFU1U"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumClaro" id="bocanada1999">
+                        <div class="albumImg">
+                            <img src="img/albumBocanada1999.jpg"
+                                alt="Portada del segundo album como solista de Gustavo Cerati, Bocanada 1999">
+                        </div>
+                        <h4 class="albumTitle">
+                            BOCANADA (1999)
+                        </h4>
+                        <div class="escucharAlbum albumClaro">
+                            <a href="https://open.spotify.com/album/2rIdWbXPjcq8K7BCccBhhC"
+                                target="blank"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/373731"
+                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/bocanada/304792998" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_nlbFbx2_8gl5PC-muumqcy0T-BG7Xy0Zw"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumOscuro" id="episodiosSinfonicos2001">
+                        <div class="albumImg">
+                            <img src="img/album11EpisodiosSinfonicos2001.jpg"
+                                alt="Portada del album 11 Episodios sinfónicos, de Gustavo Cerati en 2001">
+                        </div>
+                        <h4 class="albumTitle">
+                            11 EPISODIOS SINFÓNICOS (2001)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/3fYo0MVmXOnGtJiZVUV7nH" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/8272776" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/11-episodios-sinf%C3%B3nicos/909577904" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_nhQUHYDfg1ouHtC6VXJP5mHDeSjl-958M"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumOscuro" id="siempreEsHoy2002">
+                        <div class="albumImg">
+                            <img src="img/albumSiempreEsHoy2002.jpg"
+                                alt="Portada del album Siempre es Hoy de Gustavo Cerati, 2002">
+                        </div>
+                        <h4 class="albumTitle">
+                            SIEMPRE ES HOY (2002)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/46Yq9oqsaZJb9ahoMk9iVd" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/373733" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/siempre-es-hoy/325223569" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kfMkZeTwyKiGcDgexErZRNKzzLB9nf45A"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumClaro" id="ahiVamos2006">
+                        <div class="albumImg">
+                            <img src="img/albumAhiVamos2006.jpg"
+                                alt="Portada del album Ahi Vamos de Gustavo Cerati, 2006">
+                        </div>
+                        <h4 class="albumTitle">
+                            AHI VAMOS (2006)
+                        </h4>
+                        <div class="escucharAlbum albumClaro">
+                            <a href="https://open.spotify.com/album/7KHNK7l8peO0t95I1v7BmP"
+                                target="blank"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/1214806"
+                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/ah%C3%AD-vamos/157363880" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_mWhTat1R7Pg9tuvPqfj6FY_rqt_UVrsg8"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumClaro" id="fuerzaNatural2009">
+                        <div class="albumImg">
+                            <img src="img/albumFuerzaNatural2009.jpg"
+                                alt="Portada del ultimo album de estudio de Gustavo Cerati como solista, Fuerza Natural 2009">
+                        </div>
+                        <h4 class="albumTitle">
+                            FUERZA NATURAL (2009)
+                        </h4>
+                        <div class="escucharAlbum albumClaro">
+                            <a href="https://open.spotify.com/album/51wepZm3YvZfvFxiu7D5F8"
+                                target="blank"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/58815872"
+                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/fuerza-natural/1358493163" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_lWHTEJVi1c6NW97V2ZbdveaaTVEuTz4mA"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+
+                </div>
             </section>
         </main>
         <footer class="footer">
