--- a/Proyects/Build_a_Tribute_Page/index.html
+++ b/Proyects/Build_a_Tribute_Page/index.html
@@ -266,8 +266,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/15193407?utm_source=deezer&utm_content=album-15193407&utm_term=3116352084_1569008091&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/zona-de-promesas-mixes-1984-1993/1199713157" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/zona-de-promesas-mixes-1984-1993/1199713157"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_n2etRC005jINpb_7ghs4A8OPTtInq3I_8"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -305,8 +305,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/382011?utm_source=deezer&utm_content=album-382011&utm_term=3116352084_1569008152&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/mtv-unplugged-comfort-y-m%C3%BAsica-para-volar/286722893" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/mtv-unplugged-comfort-y-m%C3%BAsica-para-volar/286722893"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_kUHAJzp-uauv2CM5cJkCOjEylZF8Zl9w0"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -324,8 +324,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/1222446?utm_source=deezer&utm_content=album-1222446&utm_term=3116352084_1569008185&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/el-%C3%BAltimo-concierto-a-en-vivo/321883893" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/el-%C3%BAltimo-concierto-a-en-vivo/321883893"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_lCfYVZO5442-W5J4Rvu9tKgqcB5X9m4Ys"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -344,8 +344,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/1222447?utm_source=deezer&utm_content=album-1222447&utm_term=3116352084_1569008209&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/el-%C3%BAltimo-concierto-b-en-vivo/321883638" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/el-%C3%BAltimo-concierto-b-en-vivo/321883638"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_kGteMYUKZeDnGp57GUjvK3AknmVls9-PM"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -363,8 +363,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/1223703?utm_source=deezer&utm_content=album-1223703&utm_term=3116352084_1569008299&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/gira-me-ver%C3%A1s-volver-vol-1/293933516" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/gira-me-ver%C3%A1s-volver-vol-1/293933516"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_kGEErn3UD7A_w4-unkvEnnpuOY6YSo5D8"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -383,8 +383,8 @@
                                 target="blank"><i class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/mx/album/1223704?utm_source=deezer&utm_content=album-1223704&utm_term=3116352084_1569010854&utm_medium=web"
                                 target="blank"><i class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/cl/album/gira-me-ver%C3%A1s-volver-vol-2/293963345" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/cl/album/gira-me-ver%C3%A1s-volver-vol-2/293963345"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_nEZzNKBfP7zR9RsiaHsXCHbhHwxk2uTZM"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -424,10 +424,10 @@
                             BOCANADA (1999)
                         </h4>
                         <div class="escucharAlbum albumClaro">
-                            <a href="https://open.spotify.com/album/2rIdWbXPjcq8K7BCccBhhC"
-                                target="blank"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.deezer.com/en/album/373731"
-                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://open.spotify.com/album/2rIdWbXPjcq8K7BCccBhhC" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/373731" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
                             <a href="https://music.apple.com/us/album/bocanada/304792998" target="blank"><i
                                     class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_nlbFbx2_8gl5PC-muumqcy0T-BG7Xy0Zw"
@@ -447,8 +447,8 @@
                                     class="fab fa-spotify"></i></a>
                             <a href="https://www.deezer.com/en/album/8272776" target="blank"><i
                                     class="fab fa-deezer"></i></a>
-                            <a href="https://music.apple.com/us/album/11-episodios-sinf%C3%B3nicos/909577904" target="blank"><i
-                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.apple.com/us/album/11-episodios-sinf%C3%B3nicos/909577904"
+                                target="blank"><i class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_nhQUHYDfg1ouHtC6VXJP5mHDeSjl-958M"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -472,6 +472,25 @@
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
+                    <div class="albumOscuro" id="siempreEsHoyReversiones2003">
+                        <div class="albumImg">
+                            <img src="img/albumSiempreEsHoyReversiones2003.jpg"
+                                alt="Portada del album Siempre es Hoy de Gustavo Cerati reversionado con otros artistas, 2003">
+                        </div>
+                        <h4 class="albumTitle tituloLargo">
+                            SIEMPRE ES HOY - REVERSIONES (2003)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/71Q5XZXu4maPhmUwyITtMs" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/mx/album/373734" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/siempre-es-hoy-reversiones/304753321" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kfwM_bk2yjay0Vc12piwt52GVYwLaRCEQ"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
                     <div class="albumClaro" id="ahiVamos2006">
                         <div class="albumImg">
                             <img src="img/albumAhiVamos2006.jpg"
@@ -481,10 +500,10 @@
                             AHI VAMOS (2006)
                         </h4>
                         <div class="escucharAlbum albumClaro">
-                            <a href="https://open.spotify.com/album/7KHNK7l8peO0t95I1v7BmP"
-                                target="blank"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.deezer.com/en/album/1214806"
-                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://open.spotify.com/album/7KHNK7l8peO0t95I1v7BmP" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/1214806" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
                             <a href="https://music.apple.com/us/album/ah%C3%AD-vamos/157363880" target="blank"><i
                                     class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_mWhTat1R7Pg9tuvPqfj6FY_rqt_UVrsg8"
@@ -500,16 +519,105 @@
                             FUERZA NATURAL (2009)
                         </h4>
                         <div class="escucharAlbum albumClaro">
-                            <a href="https://open.spotify.com/album/51wepZm3YvZfvFxiu7D5F8"
-                                target="blank"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.deezer.com/en/album/58815872"
-                                target="blank"><i class="fab fa-deezer"></i></a>
+                            <a href="https://open.spotify.com/album/51wepZm3YvZfvFxiu7D5F8" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/en/album/58815872" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
                             <a href="https://music.apple.com/us/album/fuerza-natural/1358493163" target="blank"><i
                                     class="fab fa-itunes-note"></i></a>
                             <a href="https://music.youtube.com/playlist?list=OLAK5uy_lWHTEJVi1c6NW97V2ZbdveaaTVEuTz4mA"
                                 target="blank"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
+
+                </div>
+                <div class="discografiaContent">
+                    <div class="bandaTitle">
+                        <h3>OTROS PROYECTOS</h3>
+                    </div>
+                </div>
+                <div class="albumes">
+                    <div class="albumClaro" id="coloresSantos1992">
+                        <div class="albumImg">
+                            <img src="img/albumColoresSantos1992.jpg"
+                                alt="Portada del disco Colores Santos, compuesto por Gustavo Cerati y Daniel Melero en 1992">
+                        </div>
+                        <h4 class="albumTitle">
+                            COLORES SANTOS (1992)
+                        </h4>
+                        <div class="escucharAlbum albumClaro">
+                            <a href="https://open.spotify.com/album/51R5xJIi26jma8Bsr4rsZ2" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/es/album/166534512" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/colores-santos/1527328472" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_mb2DctX8dLoF3PDFbP3mb1WO8cSGTrj1o"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumClaro" id="friccionGrupo">
+                        <div class="albumImg">
+                            <img src="img/albumFriccion.jpg"
+                                alt="Grupo Friccion, donde Gustavo Cerati era guitarrista y corista">
+                        </div>
+                        <h4 class="albumTitle">
+                            FRICCIÓN - EL ALBUM (1994)
+                        </h4>
+                        <div class="escucharAlbum albumClaro">
+                            <a href="https://open.spotify.com/album/2jMCPqcm321OLFDmPg58Bw" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/mx/album/219128442" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/artist/friccion/321533840" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kpetkpOGufwq6S2tItysD9ywT9taCGjtU"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumOscuro" id="medidaUniversal1999">
+                        <div class="albumImg">
+                            <img src="img/albumMedidaUniversal1999.jpg"
+                                alt="Portada del album Medida Universal, proyecto de electrónica de Gustavo Cerati en OCIO">
+                        </div>
+
+                        <h4 class="albumTitle">
+                            OCIO - MEDIDA UNIVERSAL (1999)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/22yD3eeWBt96ruIW9zHu8P" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/mx/album/43612511" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/medida-universal/1252096819" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_nEN1i11d0FqYOwiQVvpwwIw91oLaeTWfw"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="albumOscuro" id="masBien2001">
+                        <div class="albumImg">
+                            <img src="img/albumMasBien2001.jpg"
+                                alt="Portada del album +Bien, banda sonora de la pelicula homónima donde Cerati tambien actuó">
+                        </div>
+
+                        <h4 class="albumTitle">
+                            +BIEN (2001)
+                        </h4>
+                        <div class="escucharAlbum albumOscuro">
+                            <a href="https://open.spotify.com/album/6Hfm9k5H74TN25V2cYLFiu" target="blank"><i
+                                    class="fab fa-spotify"></i></a>
+                            <a href="https://www.deezer.com/mx/album/373735" target="blank"><i
+                                    class="fab fa-deezer"></i></a>
+                            <a href="https://music.apple.com/us/album/bien-m%C3%BAsica-de-la-pel%C3%ADcula/325222401" target="blank"><i
+                                    class="fab fa-itunes-note"></i></a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_m6EIxbqH2fyL8qUNFxtC6KEPHIdcKQfS0"
+                                target="blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+
+
+
 
                 </div>
             </section>
