--- a/Proyects/Build_a_Tribute_Page/index.html
+++ b/Proyects/Build_a_Tribute_Page/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/779db6cf6f.js" crossorigin="anonymous"></script>
 
-    <title>Gustavo Cerati - Tributo</title>
     <link rel="shortcut icon" href="img/gustavoCeratiLogo.ico">
+    <meta name="description" content="Tributo al exitoso músico argentino Gustavo Cerati"/>
+    <title>Gustavo Cerati - Tributo</title>
 </head>
 
 <body class="body">
