--- a/Proyects/Survey_Form/index.html
+++ b/Proyects/Survey_Form/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
+    <meta name="description" content="Formulario para conseguir un presupuesto personalizado sobre diseño de páginas web"/>
     <title>Survey Form - Free Code Camp</title>
 </head>
 
