--- a/Proyects/Technical_Documentation_Page/index.html
+++ b/Proyects/Technical_Documentation_Page/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technical Documentation Page - Free Code Camp</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/ico" href="img/javaLogo.ico">
+    <meta name="description" content="This site contains technical documentation about Java Standard Edition"/>
+
+    <title>Java SE Documentation - FreeCodeCamp.org</title>
+    
 </head>
 
-<body>
-    <h1>Próximamente</h1>
+<body class="body">
+    <div class="wrapper">
+
+    </div>
 </body>
 
 </html>
