Responsive design adjustments

--- a/Proyects/Technical_Documentation_Page/index.html
+++ b/Proyects/Technical_Documentation_Page/index.html
@@ -300,10 +300,10 @@
                 <p>Website made by Selien Yorbandi</p>
                 <div class="linksFooter">
                     <a href="https://github.com/selienyorbandi" target="blank"><img
-                            src="/Proyects/Build_a_Tribute_Page/img/logotipo-de-github.png"
+                            src="img/logotipo-de-github.png"
                             alt="Github profile of Selien Yorbandi" width="25px"></a>
                     <a href="https://www.linkedin.com/in/selien-yorbandi-92a582210/" target="blank"><img
-                            src="/Proyects/Build_a_Tribute_Page/img/linkedin.png"
+                            src="img/linkedin.png"
                             alt="LinkedIn profile of Selien Yorbandi" width="25px"></a>
                 </div>
             </div>
