new section for javadocs

--- a/Proyects/Technical_Documentation_Page/index.html
+++ b/Proyects/Technical_Documentation_Page/index.html
@@ -27,7 +27,7 @@
                 <ol class="sectionLinks">
                     <li><a href="#introduction" class="nav-link">Introduction</a></li>
                     <li><a href="#getting_started" class="nav-link">Getting Started</a></li>
-                    <li>Sintax</li>
+                    <li><a href="#java_sintax">Sintax</a></li>
                     <li>Comments</li>
                     <li>Variables</li>
                     <li>Data Types</li>
@@ -57,7 +57,7 @@
             <ul class="nav-menu">
                 <li><a href="#introduction" class="nav-link">Introduction</a></li>
                 <li><a href="#getting_started" class="nav-link">Getting Started</a></li>
-                <li><a href="#">Sintax</a></li>
+                <li><a href="#java_sintax">Sintax</a></li>
                 <li><a href="#">Comments</a></li>
                 <li><a href="#">Variables</a></li>
                 <li><a href="#">Data Types</a></li>
@@ -74,7 +74,7 @@
                 <li><a href="#">Arrays</a></li>
             </ul>
         </nav>
-        
+
         <main class="main" id="main-doc">
             <section class="introduction main-section" id="introduction">
                 <header>
@@ -293,18 +293,49 @@
                     <figcaption>Files window, showing the generated .class file.</figcaption>
                 </figure>
             </section>
+            <section class="syntax main-section" id="java_sintax">
+                <header>
+                    <h2>JAVA SINTAX</h2>
+                    <hr>
+                </header>
+                <h3>The main Method</h3>
+                <p>In the previous chapter, we created a Java file called Main.java, and we used the following code to
+                    print "Hello World" to the screen:</p>
+                <code class="code">
+                    public class Main { <br>
+                        public static void main(String[] args) { <br>
+                          System.out.println("Hello World"); <br>
+                        } <br>
+                      }    <br>
+                </code>
+                <p>Every line of code that runs in Java must be inside a class. In our example, we named the class
+                    <strong>Main</strong>. A class should always start with an uppercase first letter.</p>
+                <p>The <strong>main()</strong> method is required and you will see it in every Java program:</p>
+                <code class="code">public static void main(String[] args)</code>
+                <p>Any code inside the main() method will be executed. You don't have to understand the keywords before
+                    and after main. You will get to know them bit by bit while reading this tutorial.</p>
+                <p>For now, just remember that every Java program has a class name which must match the filename, and
+                    that every program must contain the main() method.</p>
+                <h3>System.out.println()</h3>
+                <p>Inside the main() method, we can use the println() method to print a line of text to the screen:</p>
+                <code class="code">public static void main(String[] args) { <br>
+                    System.out.println("Hello World"); <br>
+                  } <br> 
+                </code>
+                <p class="notes"> <span>Note:</span> The curly braces {} marks the beginning and the end of a block of code. <br>
+                   Each code statement must end with a semicolon.
+                </p>
+            </section>
 
         </main>
         <footer class="footer">
             <div class="my-profile">
                 <p>Website made by Selien Yorbandi</p>
                 <div class="linksFooter">
-                    <a href="https://github.com/selienyorbandi" target="blank"><img
-                            src="img/logotipo-de-github.png"
+                    <a href="https://github.com/selienyorbandi" target="blank"><img src="img/logotipo-de-github.png"
                             alt="Github profile of Selien Yorbandi" width="25px"></a>
                     <a href="https://www.linkedin.com/in/selien-yorbandi-92a582210/" target="blank"><img
-                            src="img/linkedin.png"
-                            alt="LinkedIn profile of Selien Yorbandi" width="25px"></a>
+                            src="img/linkedin.png" alt="LinkedIn profile of Selien Yorbandi" width="25px"></a>
                 </div>
             </div>
             <p>Under construction</p>
