--- a/Proyects/Technical_Documentation_Page/index.html
+++ b/Proyects/Technical_Documentation_Page/index.html
@@ -33,9 +33,9 @@
                     <li><a href="#data_types" class="nav-link">Data Types</a></li>
                     <li><a href="#type_casting">Type Casting</a></li>
                     <li><a href="#operators">Operators</a></li>
-                    <li>Strings</li>
-                    <li>Math</li>
-                    <li>Booleans</li>
+                    <li><a href="#strings">Strings</a></li>
+                    <li><a href="#math">Math</a></li>
+                    <li><a href="#booleans">Booleans</a></li>
                     <li>If Else</li>
                     <li>Switch</li>
                     <li>While</li>
@@ -63,9 +63,9 @@
                 <li><a href="#data_types" class="nav-link">Data Types</a></li>
                 <li><a href="#type_casting">Type Casting</a></li>
                 <li><a href="#operators">Operators</a></li>
-                <li><a href="#">Strings</a></li>
-                <li><a href="#">Math</a></li>
-                <li><a href="#">Booleans</a></li>
+                <li><a href="#strings">Strings</a></li>
+                <li><a href="#math">Math</a></li>
+                <li><a href="#booleans">Booleans</a></li>
                 <li><a href="#">If Else</a></li>
                 <li><a href="#">Switch</a></li>
                 <li><a href="#">While</a></li>
@@ -678,7 +678,7 @@
                         same size.</li>
                 </ul>
             </section>
-            <section class="type-casting" id="type_casting">
+            <section class="type-casting main-section" id="type_casting">
                 <header>
                     <h2>TYPE CASTING</h2>
                     <hr>
@@ -723,7 +723,7 @@
                     </p>
                 </code>
             </section>
-            <section class="operators" id="operators">
+            <section class="operators main-section" id="operators">
                 <header>
                     <h2>OPERATORS</h2>
                     <hr>
@@ -944,9 +944,209 @@
                         <td>!(x &lt; 5 &amp;&amp; x &lt; 10)</td>
                     </tr>
                 </table>
-
-
-
+            </section>
+            <section class="strings main-section" id="strings">
+                <header>
+                    <h2>STRINGS</h2>
+                    <hr>
+                </header>
+                <p>Strings are used for storing text.</p>
+                <p>A String variable contains a collection of characters surrounded by double quotes:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> greeting = <span class="codeCharacter">"Hello"</span>;
+                </code>
+                <h3>String lenght</h3>
+                <p>A String in Java is actually an object, which contain methods that can perform certain operations on
+                    strings. For example, the length of a string can be found with the length() method:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> text = <span class="codeCharacter">"ABCDEFGHIJKLMNOPQRSTUVWXYZ"</span>; <br>
+                    System.<span class="codeField">out</span>.println(<span class="codeCharacter">"The length of the txt string is: "</span> + text.length());
+                </code>
+                <h3>More String Methods</h3>
+                <p>There are many string methods available, for example toUpperCase() and toLowerCase():</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> text = <span class="codeCharacter">"Hello World"</span>; <br>
+                    System.<span class="codeField">out</span>.println(text.toUpperCase()); <span class="codeComment">// Outputs "HELLO WORLD"</span> <br>
+                    System.<span class="codeField">out</span>.println(text.toLowerCase()); <span class="codeComment">// Outputs "hello world"</span>
+                </code>
+                <h3>Finding a Character in a String</h3>
+                <p>The indexOf() method returns the <strong>index</strong> (the position) of the first occurrence of a
+                    specified text in a string (including whitespace):</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> text = <span class="codeCharacter">"Please locate where 'locate' occurs!"</span>; <br>
+                    System.<span class="codeField">out</span>.println(text.indexOf(<span class="codeCharacter">"locate"</span>)); <span class="codeComment">// Outputs 7</span>
+                </code>
+                <p class="notes">
+                    Java counts positions from zero. <br>
+                    0 is the first position in a string, 1 is the second, 2 is the third ...
+                </p>
+                <h3>String Concatenation</h3>
+                <p>The + operator can be used between strings to combine them. This is called concatenation:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> firstName = <span class="codeCharacter">"John"</span>; <br>
+                    <span class="codeIdentifier">String</span> firstName = <span class="codeCharacter">"Doe"</span>; <br>
+                    System.<span class="codeField">out</span>.println(firstName + <span class="codeCharacter">" "</span> + lastName); 
+                </code>
+                <p class="notes">
+                    Note that we have added an empty text (" ") to create a space between firstName and lastName on
+                    print.
+                </p>
+                <p>You can also use the concat() method to concatenate two strings:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> firstName = <span class="codeCharacter">"John"</span>; <br>
+                    <span class="codeIdentifier">String</span> firstName = <span class="codeCharacter">"Doe"</span>; <br>
+                    System.<span class="codeField">out</span>.println(firstName.concat(lastName)); 
+                </code>
+                <h3>Special Characters</h3>
+                <p>Because strings must be written within quotes, Java will misunderstand this string, and generate an
+                    error.</p>
+                <p>The solution to avoid this problem, is to use the <strong>backslash escape character</strong>.</p>
+                <p>The backslash (\) escape character turns special characters into string characters:</p>
+                <table class="table">
+                    <tr>
+                        <th>Escape character</th>
+                        <th>Result</th>
+                        <th>Description</th>
+                    </tr>
+                    <tr>
+                        <td>\'</td>
+                        <td>'</td>
+                        <td>Single quote</td>
+                    </tr>
+                    <tr>
+                        <td>\&quot;</td>
+                        <td>&quot;</td>
+                        <td>Double quote</td>
+                    </tr>
+                    <tr>
+                        <td>\\</td>
+                        <td>\</td>
+                        <td>Backslash</td>
+                    </tr>
+                </table>
+                <p>Six other escape sequences are valid in Java:</p>
+                <table class="table">
+                    <tr>
+                        <th>Code</th>
+                        <th>Result</th>
+                    </tr>
+                    <tr>
+                        <td>\n</td>
+                        <td>New Line</td>
+                    </tr>
+                    <tr>
+                        <td>\r</td>
+                        <td>Carriage Return</td>
+                    </tr>
+                    <tr>
+                        <td>\t</td>
+                        <td>Tab</td>
+                    </tr>
+                    <tr>
+                        <td>\b</td>
+                        <td>Backspace</td>
+                    </tr>
+                    <tr>
+                        <td>\f</td>
+                        <td>Form Feed</td>
+                    </tr>
+                </table>
+                <h3>Adding Numbers and Strings</h3>
+                <p class="notes">
+                    <span>WARNING!</span> <br>
+                    Java uses the + operator for both addition and concatenation. <br>
+                    Numbers are added. Strings are concatenated. <br>
+                </p>
+                <p>If you add two numbers, the result will be a number:</p>
+                <code class="code">
+                    <span class="codeIdentifier">int</span> x = 10; <br>
+                    <span class="codeIdentifier">int</span> y = 20; <br>
+                    <span class="codeIdentifier">int</span> z = x + y; <span class="codeComment">// z will be 30 (an integer/number)</span> <br>
+                </code>
+                <p>If you add two strings, the result will be a string concatenation:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> x = "10"; <br>
+                    <span class="codeIdentifier">String</span> y = "20"; <br>
+                    <span class="codeIdentifier">String</span> z = x + y; <span class="codeComment">// z will be 1020 (a String)</span> <br>
+                </code>
+                <p>If you add a number and a string, the result will be a string concatenation:</p>
+                <code class="code">
+                    <span class="codeIdentifier">String</span> x = "10"; <br>
+                    <span class="codeIdentifier">int</span> y = 20; <br>
+                    <span class="codeIdentifier">String</span> z = x + y; <span class="codeComment">// z will be 1020 (a String)</span> <br>
+                </code>
+            </section>
+            <section class="math main-section" id="math">
+                <header>
+                    <h2>Math</h2>
+                    <hr>
+                </header>
+                <p>The Java Math class has many methods that allows you to perform mathematical tasks on numbers.</p>
+                <h3>Math.max(x,y)</h3>
+                <p>The Math.max(x,y) method can be used to find the highest value of x and y:</p>
+                <code class="code"><span class="codeIdentifier">Math</span>.max(5, 10);</code>
+                <h3>Math.min(x,y)</h3>
+                <p>The Math.min(x,y) method can be used to find the lowest value of x and y:</p>
+                <code class="code"><span class="codeIdentifier">Math</span>.min(5, 10);</code>
+                <h3>Math.sqrt(x)</h3>
+                <p>The Math.sqrt(x) method returns the square root of x:</p>
+                <code class="code"><span class="codeIdentifier">Math</span>.sqrt(64);</code>
+                <h3>Math.abs(x)</h3>
+                <p>The Math.abs(x) method returns the absolute (positive) value of x:</p>
+                <code class="code"><span class="codeIdentifier">Math</span>.abs(-4.7);</code>
+                <h3>Random Numbers</h3>
+                <p>Math.random() returns a random number between 0.0 (inclusive), and 1.0 (exclusive):</p>
+                <code class="code"><span class="codeIdentifier">Math</span>.random();</code>
+                <p>To get more control over the random number, e.g. you only want a random number between 0 and 100, you
+                    can use the following formula:</p>
+                <code class="code">
+                   <span class="codeIdentifier">int</span> randomNum = (int)(<span class="codeIdentifier">Math</span>.random() * 101); <span class="codeComment">// 0 to 100</span> 
+                </code>
+            </section>
+            <section class="booleans main-section" id="booleans">
+                <header>
+                    <h2>BOOLEANS</h2>
+                    <hr>
+                </header>
+                <p>Very often, in programming, you will need a data type that can only have one of two values, like:</p>
+                <ul>
+                    <li>YES / NO</li>
+                    <li>ON / OFF</li>
+                    <li>TRUE / FALSE</li>
+                </ul>
+                <p>For this, Java has a boolean data type, which can take the values true or false.</p>
+                <h3>Boolean Values</h3>
+                <p>A boolean type is declared with the boolean keyword and can only take the values true or false:</p>
+                <code class="code">
+                    <span class="codeIdentifier">boolean</span> isJavaFun = true; <br>
+                    <span class="codeIdentifier">boolean</span> isFishTasty = false; <br>
+                    System.<span class="codeField">out</span>.println(isJavaFun); <span class="codeComment">// Outputs true</span> <br>
+                    System.<span class="codeField">out</span>.println(FishTasty); <span class="codeComment">// Outputs false</span>
+                </code>
+                <p>However, it is more common to return boolean values from boolean expressions, for conditional testing
+                    (see below).</p>
+                <h3>Boolean Expression</h3>
+                <p>A Boolean expression is a Java expression that returns a Boolean value: true or false.</p>
+                <p>You can use a comparison operator, such as the greater than (>) operator to find out if an expression
+                    (or a variable) is true:</p>
+                <code class="code">
+                    <span class="codeIdentifier">int</span> x = 10; <br>
+                    <span class="codeIdentifier">int</span> y = 9; <br>
+                    System.<span class="codeField">out</span>.println(x > y); <span class="codeComment">// returns true, because 10 is higher than 9</span> <br>
+                </code>
+                <p>Or even easier:</p>
+                <code class="code">
+                    System.<span class="codeField">out</span>.println(10 > 9); <span class="codeComment">// returns true, because 10 is higher than 9</span> <br>
+                </code>
+                <p>In the examples below, we use the equal to (==) operator to evaluate an expression:</p>
+                <code class="code">
+                    <span class="codeIdentifier">int</span> x = 10; <br>
+                    System.<span class="codeField">out</span>.println(x == 10); <span class="codeComment">// returns true, because the value of x is equal to 10</span> <br>
+                </code>
+                <p class="notes">
+                    The Boolean value of an expression is the basis for all Java comparisons and conditions. <br>
+                    You will learn more about conditions in the next chapter.
+                </p>
             </section>
         </main>
         <footer class="footer">
